# my-grpc-perf

go/: go.mod
go/cmd/client/: main.go
go/cmd/server/: main.go
go/tikvpb/: tikvpb.pb.go  tikvpb_grpc.pb.go
grpcio/: Cargo.toml  build.rs
proto/: tikvpb.proto
tonic/: Cargo.toml  build.rs
tonic/src/: lib.rs
