[package]
name = "tonic-demo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.5"
prost = "0.8"
tokio = { version = "1", features = ["full"] }
mimalloc = { version = "0.1", default-features = false }
hdrhistogram = "7"

[build-dependencies]
tonic-build = "0.5"

[profile.release]
codegen-units = 1
lto = true
